--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
             <span>Entradas</span>
             <img src="./assets/income.svg" />
           </h3>
-          <p>R$ 5.000,00</p>
+          <p id="incomeDisplay">R$ 0,00</p>
         </div>
         <div class="card">
           <h3>
             <span>Saidas</span>
             <img src="./assets/expense.svg" />
           </h3>
-          <p>R$ 2.000,00</p>
+          <p id="expenseDisplay">R$ 0,00</p>
         </div>
         <div class="card total">
           <h3>
             <span>Total</span>
             <img src="./assets/total.svg" />
           </h3>
-          <p>R$ 3.000,00</p>
+          <p id="totalDisplay">R$ 0,00</p>
         </div>
       </section>
 
@@ -65,7 +65,7 @@
       <div class="modal">
         <div id="form">
           <h2>Nova Transação</h2>
-          <form>
+          <form onsubmit="Form.submit(event)">
             <div class="input-group">
               <label class="sr-only" for="description">Descrição</label>
               <input type="text" id="description" name="description" placeholder="Descrição" />
